# Netlink-Communication-Demo

./: CMakeLists.txt  README.md
include/: ConfigConsts.h  Connection.h  StringMessage.h
recv/: recv.cpp
send/: send.cpp
tests/: ConnectionTest.cpp  MessageTest.cpp
